--- a/Javascript01/Readme
+++ b/Javascript01/Readme
@@ -1,3 +1,4 @@
 First course on JavaScript offered by Allura, a Brazilian Coding School with good background. 
 This course were instructed by Ricardo Bugan and watched/done/completed on 23 and 24/02/22. 
 Pretty simple course but very well thaught and explained.
+JavaScript: primeiros passos com a linguagem
